Fixed Diff Overflow

--- a/static/layout.css
+++ b/static/layout.css
@@ -1,3 +1,5 @@
+/* @override https://licht.stupidpupil.co.uk/static/layout.css */
+
 /* Sidebar Width */
 
 .sidebar {
@@ -233,9 +235,9 @@ table.filecontent {
 }
 
 table.filecontent td.line-code pre {
-	white-space: 0;
-	word-break: break-all;
+	word-break: break-word;
 	padding: 0 10px 0 30px;
+	text-wrap:normal;
 }
 
 /* Reused Elements */
